appId: com.sellio.marketplace
---
- launchApp
- assertVisible: "MARKETPLACE"
- tapOn: "ADD TO CART"
- tapOn: "OPEN CART"
- assertVisible: "YOUR CART."
- tapOn: "SECURE CHECKOUT"
- assertVisible: "Checkout"
