appId: com.sellio.marketplace
---
- launchApp
- assertVisible: "MARKETPLACE"
- tapOn: "SAVE TO FAVORITES"
- tapOn: "Favorites"
- assertVisible: "FAVORITES."
- swipe:
    direction: DOWN
